# Time-Series-Stationarity-Analyzer

./: .gitignore  README.md  README_EN.md  app.py  pyproject.toml  requirements.txt  run.bat
data/: sample_stock_data.csv
time_series_stationarity_analyzer/: __init__.py  stationarity.py  utils.py  visualization.py
